[BUG #8514] changing the scroller height breaks the waypoint calculation --> use an absolut positioned loading indicator

--- a/application/mobileshowcase/source/resource/mobileshowcase/scss/_app.scss
+++ b/application/mobileshowcase/source/resource/mobileshowcase/scss/_app.scss
@@ -301,7 +301,7 @@ $waypoint-width: 300px;
 .waypoint-info {
   @include transform(translate3d(0,0,0));
   @include transition(all 2s);
- 
+
   z-index: 10;
 
   box-sizing: border-box;
@@ -326,6 +326,9 @@ $waypoint-width: 300px;
   padding-top: rem(6);
   padding-bottom: rem(6);
   background-color: $highlight-color;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 
   * {
     color: white !important;
